# pcl2depth

./: CMakeLists.txt  fakeCameraInfo.yaml  package.xml
ThingsNotDirectlyRelatedToThisPackage/comparasionOfDepthFromPcl2DepthAndKinect/: imageDiff.m
ThingsNotDirectlyRelatedToThisPackage/depth_image_proc_launchFiles/: depthFromPcl.launch  kinect.launch
include/pcl2depth/: PointCloud2ToDepth.h
launch/: pcl2depth.launch
src/: .PointCloud2ToDepth.cpp.kate-swp  PointCloud2ToDepth.cpp  main.cpp
